--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "jquery-qrcode"]
 	path = jquery-qrcode
 	url = git://github.com/jeromeetienne/jquery-qrcode.git
+[submodule "github-fork-ribbon-css"]
+	path = github-fork-ribbon-css
+	url = git://github.com/simonwhitaker/github-fork-ribbon-css.git
